avoid flickering on hover due to the recently changes of anchor hover state

--- a/packages/dnb-ui-lib/src/style/themes/theme-ui/anchor-mixins.scss
+++ b/packages/dnb-ui-lib/src/style/themes/theme-ui/anchor-mixins.scss
@@ -38,7 +38,7 @@
 }
 @mixin hoverStyle() {
   background-color: var(--color-mint-green-50);
-  border-bottom: none;
+  border-bottom-color: transparent;
 }
 @mixin activeStyle() {
   color: var(--color-mint-green);
